# Rust-Ai-Agent---Deepseek

./: .env.example  .gitignore  Cargo.toml  PURPOSE.MD  README.md
characters/: David.json  asep.json  coding_ninja.json  masterchef_scientist.json  nova_ai.json  test_profile.json
docs/: FEATURES.md
src/: lib.rs  main.rs  personality.rs
src/api/: api.rs  mod.rs
src/commands/: character.rs  document.rs  mod.rs  system.rs  web.rs  webcopy.rs.bak
src/database/: database.rs
src/memory/: short_term.rs
src/providers/: deepseek.rs  mod.rs
src/providers/deepseek/: deepseek.rs
src/providers/document/: cache.rs  error.rs  excel.rs  insights.rs  mod.rs  ocr.rs  pdf.rs  tests.rs  text.rs  word.rs
src/providers/twitter/: composer.rs  manager.rs  twitbrain.rs
src/providers/web_crawler/: crawler_manager.rs  mod.rs  new_crawler.rs
static/: index.html
